# icon_handler

./: .gitignore  README.md
DLLTester/: DLLTester.vcxproj  main.cpp
icon-handler-rs/icon-handler/: build.rs
icon-handler-rs/icon-handler/src/: icon_handler.rs  lib.rs
py/: icon_handler.py  requirements.txt
rs/: Cargo.toml
rs/icon-handler/: Cargo.toml  library.def
vs/: IconHandler.cpp  IconHandler.h  IconHandler.rgs  ParsecShell.aps  ParsecShell.cpp  ParsecShell.def  ParsecShell.idl  ParsecShell.rc  ParsecShell.rgs  ParsecShell.sln  ParsecShell.vcxproj  ParsecShell.vcxproj.filters  ParsecShell_i.c  ParsecShell_i.h  ParsecShell_p.c  dlldata.c  dllmain.cpp  dllmain.h  resource.h
vs/ParsecShellPS/: ParsecShellPS.vcxproj  ParsecShellPS.vcxproj.filters
